# multiivs

ivs/: .gitignore  INTEGRATION.md  Makefile  README.md  demo.sh  run.sh  setup.sh
ivs/chain/: polkadot-sdk
ivs/configs/: zombienet.toml
ivs/pallets/disease-tracker/: Cargo.toml
ivs/pallets/disease-tracker/src/: lib.rs
ivs/pallets/ivs/: Cargo.toml
ivs/pallets/ivs-aggregator/: Cargo.toml
ivs/pallets/ivs-aggregator/src/: lib.rs
ivs/pallets/ivs/src/: lib.rs
ivs/scripts/: build.sh  export-a.sh  export-agg.sh  export-b.sh  para-a-standalone.sh  para-a.sh  para-agg-standalone.sh  para-agg.sh  para-b-standalone.sh  para-b.sh  register.sh  relay.sh  start-all.sh  start-background.sh
ivs/worker/: package-lock.json  package.json  tsconfig.json
ivs/worker/src/: algorithm4-correct.ts  chain-integration.ts  ckks-mhe.ts  ckks-production.ts  ckks.ts  demo-mhe.ts  ipfs.ts  ivs-correct.ts  ivs-encrypted.ts  ivs-production.ts  ivs.ts  main.ts  mhe.ts
polkadot-sdk/: para-2000-wasm  relay-local-raw.json  relay-local.json
polkadot-sdk/substrate/frame/executive/src/: lib.rs
