[package]
name = "pallet-ivs-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
]
